--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<h1>lab 4-4</h1>
+<p>lab 4-4</p>
 <script src="code.js"></script>
 <p>list 1 is 1-10 and list 2 is -90--99</p>
 <button onclick="alert(addAll(x))">Add contents of first list</button><br>
